Add a test for failed starting and unparking